--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Lazy load in esbuild</title>
     <link rel="shortcut icon" href="#" />
 
+    <div id="view"></div>
+
     <script type="module" src="./dist/main.js"></script>
   </head>
   <body></body>
