--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <div id="view"></div>
 
-    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </head>
   <body></body>
 </html>
